objects/ProgramCategoryQualification__c.object
<CustomObject>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(Left(ProgramQualification__r.Employment__r.Employee__r.FullNameFormula__c, 37)) &amp; &apos;_&apos; &amp;Trim(Left(ProgramCategoryPeriod__r.ProgramCategory__r.Name, 36)) &amp; &apos;_&apos; &amp; TEXT(MONTH(ProgramQualification__r.EffectiveDate__c))+&quot;/&quot;+RIGHT(TEXT(YEAR(ProgramQualification__r.EffectiveDate__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCQUpdateThroughBATCH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCQ Update Through BATCH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCQualification_Unique_Key__c</fullName>
        <description>This field is used to prevent duplicate Program Category Qualifications under a  Program Qualification which belongs to the same Program Category.</description>
        <formula>ProgramQualification__r.Id + ProgramCategoryPeriod__r.ProgramCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCQualification Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQAgencyEidFormula__c</fullName>
        <description>The agency connected with the program qualification.</description>
        <formula>ProgramQualification__r.ProgramPeriod__r.Agency__r.AgencyEID__c</formula>
        <inlineHelpText>The agency connected with the program qualification.</inlineHelpText>
        <label>PQAgencyEidFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PQDocumentSourceEidGeneratedFormula__c</fullName>
        <description>Document Source from PQ</description>
        <formula>ProgramQualification__r.PQDocumentSourceEidGenerated__c</formula>
        <inlineHelpText>Document Source from PQ</inlineHelpText>
        <label>PQDocumentSourceEidGeneratedFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessStageDate__c</fullName>
        <description>The date as of which the current process stage was reached.</description>
        <inlineHelpText>The date as of which the current process stage was reached.</inlineHelpText>
        <label>Process Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessStageEIDformula__c</fullName>
        <description>Retrieves the Qualfication Process Stage EID</description>
        <formula>ProcessStage__r.QualificationProcessStageEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProcessStageEIDformula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessStageRankOrder__c</fullName>
        <formula>ProgramQualification__r.ProcessStage__r.RankOrder__c</formula>
        <label>Process Stage Rank Order Formula</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessStageRankOrderfromPCQ__c</fullName>
        <formula>ProcessStage__r.RankOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProcessStageRankOrderfromPCQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The process stage of this program category qualification.</description>
        <inlineHelpText>The process stage of this program category qualification.</inlineHelpText>
        <label>Process Stage</label>
        <referenceTo>QualificationProcessStage__c</referenceTo>
        <relationshipLabel>Program Category Qualifications</relationshipLabel>
        <relationshipName>ProgramCategoryQualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryDisqualifications__c</fullName>
        <label>Program Category Disqualifications</label>
        <summaryForeignKey>ProgramCategoryDisqualification__c.ProgramCategoryQualification__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program category period associated with the program category qualification and program qualification</description>
        <inlineHelpText>The program category period associated with the program category qualification and program qualification</inlineHelpText>
        <label>Program Category Period</label>
        <referenceTo>ProgramCategoryPeriod__c</referenceTo>
        <relationshipLabel>Program Category Qualifications</relationshipLabel>
        <relationshipName>ProgramCategoryQualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryQualificationEID__c</fullName>
        <description>The Enterprise ID for this Program Category Qualification record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Program Category Qualification record.</inlineHelpText>
        <label>Program Category Qualification EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramQualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the qualified program for an employee</description>
        <inlineHelpText>Indicates the qualified program for an employee</inlineHelpText>
        <label>Program Qualification</label>
        <referenceTo>ProgramQualification__c</referenceTo>
        <relationshipLabel>Program Category Qualifications</relationshipLabel>
        <relationshipName>ProgramCategoryQualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RankOrderofProgramcategory__c</fullName>
        <formula>ProgramCategoryPeriod__r.ProgramCategory__r.RankOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank Order of Program Category Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReadinessDate__c</fullName>
        <description>The date the program category qualification reached this state of readiness.</description>
        <inlineHelpText>The date the program category qualification reached this state of readiness.</inlineHelpText>
        <label>Readiness Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReadinessEid__c</fullName>
        <formula>Readiness__r.QualificationReadinessEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Readiness Eid Formula</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Readiness__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The state of readiness of a program category for vouchering or application.</description>
        <inlineHelpText>The state of readiness of a program category for vouchering or application.</inlineHelpText>
        <label>Readiness</label>
        <referenceTo>QualificationReadiness__c</referenceTo>
        <relationshipLabel>Program Category Qualifications</relationshipLabel>
        <relationshipName>ProgramCategoryQualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipLabel>Program Category Qualifications</relationshipLabel>
        <relationshipName>ProgramCategoryQualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Category Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProgramCategoryPeriod__c</columns>
        <columns>ProgramQualification__c</columns>
        <columns>ReadinessDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Category Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Category Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>